fix: spoilers now are hidden in visit mode, z-index adjusted

--- a/src/components/Loading/loading.module.scss
+++ b/src/components/Loading/loading.module.scss
@@ -2,6 +2,7 @@
 @import "material-symbols";
 
 .wrapper {
+  z-index: 100;
   position: fixed;
   top: 0;
   left: 0;
