--- a/src/components/Spoiler/spoiler.module.scss
+++ b/src/components/Spoiler/spoiler.module.scss
@@ -1,24 +1,42 @@
 @use "../../styles/variables";
+@import "material-symbols";
 
 .spoiler {
+  position: relative;
   transition: color 0.2s, background-color 0.2s, border-radius .2s;
-  cursor: pointer;
   padding: variables.$gap_m 0;
+  z-index: 2;
 
-  &.noEdit {
-    cursor: default;
-    user-select: none;
+  &:hover .cover.preview {
+    z-index: -1;
+    opacity: .25;
   }
 
 
-  &:not(:active),
-  &.noEdit {
-    color: transparent;
-    background-color: rgba(variables.$palette_grey_1, .8);
+  .cover {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    transform: translate(-50%, -50%);
+    background-color: variables.$palette_grey_1;
     border-radius: variables.$border_radius_m;
+    transition: width .3s ease-in-out, height .3s ease-in-out, opacity .3s ease-in;
 
-    >* {
-      opacity: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+
+    color: variables.$palette_grey_4;
+
+    &.preview {
+      opacity: .5;
+    }
+
+    &.notUncovereable {
+      cursor: default;
     }
   }
 }
