--- a/src/components/Toast/toast.module.scss
+++ b/src/components/Toast/toast.module.scss
@@ -1,6 +1,7 @@
 @use "../../styles/variables";
 
 .toast {
+  z-index: 30;
   position: fixed;
   left: 50%;
   bottom: variables.$gap_m;
