--- a/src/components/dataactions.module.scss
+++ b/src/components/dataactions.module.scss
@@ -4,6 +4,7 @@
 @import "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0";
 
 .dataActions {
+  z-index: 10;
   position: fixed;
   left: variables.$gap_m;
   bottom: variables.$gap_m;
@@ -31,9 +32,9 @@
   }
 
   &:hover {
-    &.grow_3 {
+    &.grow_2 {
 
-      grid-template-rows: calc(calc(variables.$gap_xl) * 3);
+      grid-template-rows: calc(calc(variables.$gap_xl) * 2);
     }
 
     &.grow_6 {
